--- a/experimental/higepon/scheme/test_cpp/Makefile.am
+++ b/experimental/higepon/scheme/test_cpp/Makefile.am
@@ -63,4 +63,23 @@ MacroTranslateTest.cpp\
 ../src/scheme.cpp\
 ../src/scheme.h\
 ../src/Application.cpp\
-../src/Application.h
+../src/Application.h\
+../src/PrimitiveProcedure.h\
+../src/PrimitiveProcedures/Plus.cpp\
+../src/PrimitiveProcedures/Plus.h\
+../src/PrimitiveProcedures/Cons.cpp\
+../src/PrimitiveProcedures/Cons.h\
+../src/PrimitiveProcedures/Car.cpp\
+../src/PrimitiveProcedures/Car.h\
+../src/PrimitiveProcedures/Cdr.cpp\
+../src/PrimitiveProcedures/Cdr.h\
+../src/PrimitiveProcedures/Display.cpp\
+../src/PrimitiveProcedures/Display.h\
+../src/PrimitiveProcedures/StringP.cpp\
+../src/PrimitiveProcedures/StringP.h\
+../src/PrimitiveProcedures/NumberP.cpp\
+../src/PrimitiveProcedures/NumberP.h\
+../src/PrimitiveProcedures/NumberEqual.cpp\
+../src/PrimitiveProcedures/NumberEqual.h\
+../src/PrimitiveProcedures/StringToNumber.cpp\
+../src/PrimitiveProcedures/StringToNumber.h
