--- a/experimental/higepon/scheme/test_cpp/Makefile.in
+++ b/experimental/higepon/scheme/test_cpp/Makefile.in
@@ -63,12 +63,12 @@ am_test_cpp_OBJECTS = test_cpp-main.$(OBJEXT) test_cpp-yaml.$(OBJEXT) \
 	test_cpp-Pair.$(OBJEXT) test_cpp-And.$(OBJEXT) \
 	test_cpp-Or.$(OBJEXT) test_cpp-Let.$(OBJEXT) \
 	test_cpp-LetAsterisk.$(OBJEXT) test_cpp-scheme.$(OBJEXT) \
-	test_cpp-Application.$(OBJEXT) test_cpp-Plus.$(OBJEXT) \
-	test_cpp-Cons.$(OBJEXT) test_cpp-Car.$(OBJEXT) \
-	test_cpp-Cdr.$(OBJEXT) test_cpp-Display.$(OBJEXT) \
-	test_cpp-StringP.$(OBJEXT) test_cpp-NumberP.$(OBJEXT) \
-	test_cpp-NumberEqual.$(OBJEXT) \
-	test_cpp-StringToNumber.$(OBJEXT)
+	test_cpp-load.$(OBJEXT) test_cpp-Application.$(OBJEXT) \
+	test_cpp-Plus.$(OBJEXT) test_cpp-Cons.$(OBJEXT) \
+	test_cpp-Car.$(OBJEXT) test_cpp-Cdr.$(OBJEXT) \
+	test_cpp-Display.$(OBJEXT) test_cpp-StringP.$(OBJEXT) \
+	test_cpp-NumberP.$(OBJEXT) test_cpp-NumberEqual.$(OBJEXT) \
+	test_cpp-StringToNumber.$(OBJEXT) test_cpp-Set.$(OBJEXT)
 test_cpp_OBJECTS = $(am_test_cpp_OBJECTS)
 test_cpp_LDADD = $(LDADD)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
@@ -231,6 +231,7 @@ MacroFilterTest.cpp\
 ../src/LetAsterisk.cpp\
 ../src/LetAsterisk.h\
 ../src/scheme.cpp\
+../src/load.cpp\
 ../src/scheme.h\
 ../src/Application.cpp\
 ../src/Application.h\
@@ -252,7 +253,9 @@ MacroFilterTest.cpp\
 ../src/PrimitiveProcedures/NumberEqual.cpp\
 ../src/PrimitiveProcedures/NumberEqual.h\
 ../src/PrimitiveProcedures/StringToNumber.cpp\
-../src/PrimitiveProcedures/StringToNumber.h
+../src/PrimitiveProcedures/StringToNumber.h\
+../src/PrimitiveProcedures/Set.cpp\
+../src/PrimitiveProcedures/Set.h
 
 all: all-am
 
@@ -506,6 +509,12 @@ test_cpp-scheme.o: ../src/scheme.cpp
 test_cpp-scheme.obj: ../src/scheme.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-scheme.obj `if test -f '../src/scheme.cpp'; then $(CYGPATH_W) '../src/scheme.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/scheme.cpp'; fi`
 
+test_cpp-load.o: ../src/load.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-load.o `test -f '../src/load.cpp' || echo '$(srcdir)/'`../src/load.cpp
+
+test_cpp-load.obj: ../src/load.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-load.obj `if test -f '../src/load.cpp'; then $(CYGPATH_W) '../src/load.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/load.cpp'; fi`
+
 test_cpp-Application.o: ../src/Application.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Application.o `test -f '../src/Application.cpp' || echo '$(srcdir)/'`../src/Application.cpp
 
@@ -565,6 +574,12 @@ test_cpp-StringToNumber.o: ../src/PrimitiveProcedures/StringToNumber.cpp
 
 test_cpp-StringToNumber.obj: ../src/PrimitiveProcedures/StringToNumber.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-StringToNumber.obj `if test -f '../src/PrimitiveProcedures/StringToNumber.cpp'; then $(CYGPATH_W) '../src/PrimitiveProcedures/StringToNumber.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/PrimitiveProcedures/StringToNumber.cpp'; fi`
+
+test_cpp-Set.o: ../src/PrimitiveProcedures/Set.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Set.o `test -f '../src/PrimitiveProcedures/Set.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/Set.cpp
+
+test_cpp-Set.obj: ../src/PrimitiveProcedures/Set.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Set.obj `if test -f '../src/PrimitiveProcedures/Set.cpp'; then $(CYGPATH_W) '../src/PrimitiveProcedures/Set.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/PrimitiveProcedures/Set.cpp'; fi`
 uninstall-info-am:
 
 ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
