--- a/experimental/higepon/scheme/src/Makefile.in
+++ b/experimental/higepon/scheme/src/Makefile.in
@@ -59,13 +59,15 @@ am_scheme_OBJECTS = scheme-main.$(OBJEXT) scheme-Object.$(OBJEXT) \
 	scheme-LetAsterisk.$(OBJEXT) scheme-Application.$(OBJEXT) \
 	scheme-Parser.$(OBJEXT) scheme-Tokenizer.$(OBJEXT) \
 	scheme-Node.$(OBJEXT) scheme-Translator.$(OBJEXT) \
-	scheme-Plus.$(OBJEXT) scheme-Cons.$(OBJEXT) \
-	scheme-Set.$(OBJEXT) scheme-Car.$(OBJEXT) scheme-Cdr.$(OBJEXT) \
+	scheme-Plus.$(OBJEXT) scheme-Minus.$(OBJEXT) \
+	scheme-Devide.$(OBJEXT) scheme-Multiply.$(OBJEXT) \
+	scheme-Cons.$(OBJEXT) scheme-Set.$(OBJEXT) \
+	scheme-Car.$(OBJEXT) scheme-Cdr.$(OBJEXT) \
 	scheme-Display.$(OBJEXT) scheme-StringP.$(OBJEXT) \
 	scheme-NumberP.$(OBJEXT) scheme-NumberEqual.$(OBJEXT) \
-	scheme-StringToNumber.$(OBJEXT) scheme-scheme.$(OBJEXT) \
-	scheme-Macro.$(OBJEXT) scheme-MacroFilter.$(OBJEXT) \
-	scheme-load.$(OBJEXT)
+	scheme-StringToNumber.$(OBJEXT) scheme-StringAppend.$(OBJEXT) \
+	scheme-scheme.$(OBJEXT) scheme-Macro.$(OBJEXT) \
+	scheme-MacroFilter.$(OBJEXT) scheme-load.$(OBJEXT)
 scheme_OBJECTS = $(am_scheme_OBJECTS)
 scheme_LDADD = $(LDADD)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
@@ -224,6 +226,12 @@ Translator.h\
 PrimitiveProcedure.h\
 PrimitiveProcedures/Plus.cpp\
 PrimitiveProcedures/Plus.h\
+PrimitiveProcedures/Minus.cpp\
+PrimitiveProcedures/Minus.h\
+PrimitiveProcedures/Devide.cpp\
+PrimitiveProcedures/Devide.h\
+PrimitiveProcedures/Multiply.cpp\
+PrimitiveProcedures/Multiply.h\
 PrimitiveProcedures/Cons.cpp\
 PrimitiveProcedures/Cons.h\
 PrimitiveProcedures/Set.cpp\
@@ -242,6 +250,8 @@ PrimitiveProcedures/NumberEqual.cpp\
 PrimitiveProcedures/NumberEqual.h\
 PrimitiveProcedures/StringToNumber.cpp\
 PrimitiveProcedures/StringToNumber.h\
+PrimitiveProcedures/StringAppend.cpp\
+PrimitiveProcedures/StringAppend.h\
 scheme.h\
 scheme.cpp\
 Macro.h\
@@ -478,6 +488,24 @@ scheme-Plus.o: PrimitiveProcedures/Plus.cpp
 scheme-Plus.obj: PrimitiveProcedures/Plus.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(scheme_CXXFLAGS) $(CXXFLAGS) -c -o scheme-Plus.obj `if test -f 'PrimitiveProcedures/Plus.cpp'; then $(CYGPATH_W) 'PrimitiveProcedures/Plus.cpp'; else $(CYGPATH_W) '$(srcdir)/PrimitiveProcedures/Plus.cpp'; fi`
 
+scheme-Minus.o: PrimitiveProcedures/Minus.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(scheme_CXXFLAGS) $(CXXFLAGS) -c -o scheme-Minus.o `test -f 'PrimitiveProcedures/Minus.cpp' || echo '$(srcdir)/'`PrimitiveProcedures/Minus.cpp
+
+scheme-Minus.obj: PrimitiveProcedures/Minus.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(scheme_CXXFLAGS) $(CXXFLAGS) -c -o scheme-Minus.obj `if test -f 'PrimitiveProcedures/Minus.cpp'; then $(CYGPATH_W) 'PrimitiveProcedures/Minus.cpp'; else $(CYGPATH_W) '$(srcdir)/PrimitiveProcedures/Minus.cpp'; fi`
+
+scheme-Devide.o: PrimitiveProcedures/Devide.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(scheme_CXXFLAGS) $(CXXFLAGS) -c -o scheme-Devide.o `test -f 'PrimitiveProcedures/Devide.cpp' || echo '$(srcdir)/'`PrimitiveProcedures/Devide.cpp
+
+scheme-Devide.obj: PrimitiveProcedures/Devide.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(scheme_CXXFLAGS) $(CXXFLAGS) -c -o scheme-Devide.obj `if test -f 'PrimitiveProcedures/Devide.cpp'; then $(CYGPATH_W) 'PrimitiveProcedures/Devide.cpp'; else $(CYGPATH_W) '$(srcdir)/PrimitiveProcedures/Devide.cpp'; fi`
+
+scheme-Multiply.o: PrimitiveProcedures/Multiply.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(scheme_CXXFLAGS) $(CXXFLAGS) -c -o scheme-Multiply.o `test -f 'PrimitiveProcedures/Multiply.cpp' || echo '$(srcdir)/'`PrimitiveProcedures/Multiply.cpp
+
+scheme-Multiply.obj: PrimitiveProcedures/Multiply.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(scheme_CXXFLAGS) $(CXXFLAGS) -c -o scheme-Multiply.obj `if test -f 'PrimitiveProcedures/Multiply.cpp'; then $(CYGPATH_W) 'PrimitiveProcedures/Multiply.cpp'; else $(CYGPATH_W) '$(srcdir)/PrimitiveProcedures/Multiply.cpp'; fi`
+
 scheme-Cons.o: PrimitiveProcedures/Cons.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(scheme_CXXFLAGS) $(CXXFLAGS) -c -o scheme-Cons.o `test -f 'PrimitiveProcedures/Cons.cpp' || echo '$(srcdir)/'`PrimitiveProcedures/Cons.cpp
 
@@ -531,6 +559,12 @@ scheme-StringToNumber.o: PrimitiveProcedures/StringToNumber.cpp
 
 scheme-StringToNumber.obj: PrimitiveProcedures/StringToNumber.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(scheme_CXXFLAGS) $(CXXFLAGS) -c -o scheme-StringToNumber.obj `if test -f 'PrimitiveProcedures/StringToNumber.cpp'; then $(CYGPATH_W) 'PrimitiveProcedures/StringToNumber.cpp'; else $(CYGPATH_W) '$(srcdir)/PrimitiveProcedures/StringToNumber.cpp'; fi`
+
+scheme-StringAppend.o: PrimitiveProcedures/StringAppend.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(scheme_CXXFLAGS) $(CXXFLAGS) -c -o scheme-StringAppend.o `test -f 'PrimitiveProcedures/StringAppend.cpp' || echo '$(srcdir)/'`PrimitiveProcedures/StringAppend.cpp
+
+scheme-StringAppend.obj: PrimitiveProcedures/StringAppend.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(scheme_CXXFLAGS) $(CXXFLAGS) -c -o scheme-StringAppend.obj `if test -f 'PrimitiveProcedures/StringAppend.cpp'; then $(CYGPATH_W) 'PrimitiveProcedures/StringAppend.cpp'; else $(CYGPATH_W) '$(srcdir)/PrimitiveProcedures/StringAppend.cpp'; fi`
 
 scheme-scheme.o: scheme.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(scheme_CXXFLAGS) $(CXXFLAGS) -c -o scheme-scheme.o `test -f 'scheme.cpp' || echo '$(srcdir)/'`scheme.cpp
