--- a/experimental/higepon/scheme/test_cpp/Makefile.in
+++ b/experimental/higepon/scheme/test_cpp/Makefile.in
@@ -64,11 +64,14 @@ am_test_cpp_OBJECTS = test_cpp-main.$(OBJEXT) test_cpp-yaml.$(OBJEXT) \
 	test_cpp-Or.$(OBJEXT) test_cpp-Let.$(OBJEXT) \
 	test_cpp-LetAsterisk.$(OBJEXT) test_cpp-scheme.$(OBJEXT) \
 	test_cpp-load.$(OBJEXT) test_cpp-Application.$(OBJEXT) \
-	test_cpp-Plus.$(OBJEXT) test_cpp-Cons.$(OBJEXT) \
-	test_cpp-Car.$(OBJEXT) test_cpp-Cdr.$(OBJEXT) \
-	test_cpp-Display.$(OBJEXT) test_cpp-StringP.$(OBJEXT) \
-	test_cpp-NumberP.$(OBJEXT) test_cpp-NumberEqual.$(OBJEXT) \
-	test_cpp-StringToNumber.$(OBJEXT) test_cpp-Set.$(OBJEXT)
+	test_cpp-Plus.$(OBJEXT) test_cpp-Minus.$(OBJEXT) \
+	test_cpp-Devide.$(OBJEXT) test_cpp-Multiply.$(OBJEXT) \
+	test_cpp-Cons.$(OBJEXT) test_cpp-Car.$(OBJEXT) \
+	test_cpp-Cdr.$(OBJEXT) test_cpp-Display.$(OBJEXT) \
+	test_cpp-StringP.$(OBJEXT) test_cpp-NumberP.$(OBJEXT) \
+	test_cpp-NumberEqual.$(OBJEXT) \
+	test_cpp-StringToNumber.$(OBJEXT) \
+	test_cpp-StringAppend.$(OBJEXT) test_cpp-Set.$(OBJEXT)
 test_cpp_OBJECTS = $(am_test_cpp_OBJECTS)
 test_cpp_LDADD = $(LDADD)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
@@ -238,6 +241,12 @@ MacroFilterTest.cpp\
 ../src/PrimitiveProcedure.h\
 ../src/PrimitiveProcedures/Plus.cpp\
 ../src/PrimitiveProcedures/Plus.h\
+../src/PrimitiveProcedures/Minus.cpp\
+../src/PrimitiveProcedures/Minus.h\
+../src/PrimitiveProcedures/Devide.cpp\
+../src/PrimitiveProcedures/Devide.h\
+../src/PrimitiveProcedures/Multiply.cpp\
+../src/PrimitiveProcedures/Multiply.h\
 ../src/PrimitiveProcedures/Cons.cpp\
 ../src/PrimitiveProcedures/Cons.h\
 ../src/PrimitiveProcedures/Car.cpp\
@@ -254,6 +263,8 @@ MacroFilterTest.cpp\
 ../src/PrimitiveProcedures/NumberEqual.h\
 ../src/PrimitiveProcedures/StringToNumber.cpp\
 ../src/PrimitiveProcedures/StringToNumber.h\
+../src/PrimitiveProcedures/StringAppend.cpp\
+../src/PrimitiveProcedures/StringAppend.h\
 ../src/PrimitiveProcedures/Set.cpp\
 ../src/PrimitiveProcedures/Set.h
 
@@ -527,6 +538,24 @@ test_cpp-Plus.o: ../src/PrimitiveProcedures/Plus.cpp
 test_cpp-Plus.obj: ../src/PrimitiveProcedures/Plus.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Plus.obj `if test -f '../src/PrimitiveProcedures/Plus.cpp'; then $(CYGPATH_W) '../src/PrimitiveProcedures/Plus.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/PrimitiveProcedures/Plus.cpp'; fi`
 
+test_cpp-Minus.o: ../src/PrimitiveProcedures/Minus.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Minus.o `test -f '../src/PrimitiveProcedures/Minus.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/Minus.cpp
+
+test_cpp-Minus.obj: ../src/PrimitiveProcedures/Minus.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Minus.obj `if test -f '../src/PrimitiveProcedures/Minus.cpp'; then $(CYGPATH_W) '../src/PrimitiveProcedures/Minus.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/PrimitiveProcedures/Minus.cpp'; fi`
+
+test_cpp-Devide.o: ../src/PrimitiveProcedures/Devide.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Devide.o `test -f '../src/PrimitiveProcedures/Devide.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/Devide.cpp
+
+test_cpp-Devide.obj: ../src/PrimitiveProcedures/Devide.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Devide.obj `if test -f '../src/PrimitiveProcedures/Devide.cpp'; then $(CYGPATH_W) '../src/PrimitiveProcedures/Devide.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/PrimitiveProcedures/Devide.cpp'; fi`
+
+test_cpp-Multiply.o: ../src/PrimitiveProcedures/Multiply.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Multiply.o `test -f '../src/PrimitiveProcedures/Multiply.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/Multiply.cpp
+
+test_cpp-Multiply.obj: ../src/PrimitiveProcedures/Multiply.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Multiply.obj `if test -f '../src/PrimitiveProcedures/Multiply.cpp'; then $(CYGPATH_W) '../src/PrimitiveProcedures/Multiply.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/PrimitiveProcedures/Multiply.cpp'; fi`
+
 test_cpp-Cons.o: ../src/PrimitiveProcedures/Cons.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Cons.o `test -f '../src/PrimitiveProcedures/Cons.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/Cons.cpp
 
@@ -574,6 +603,12 @@ test_cpp-StringToNumber.o: ../src/PrimitiveProcedures/StringToNumber.cpp
 
 test_cpp-StringToNumber.obj: ../src/PrimitiveProcedures/StringToNumber.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-StringToNumber.obj `if test -f '../src/PrimitiveProcedures/StringToNumber.cpp'; then $(CYGPATH_W) '../src/PrimitiveProcedures/StringToNumber.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/PrimitiveProcedures/StringToNumber.cpp'; fi`
+
+test_cpp-StringAppend.o: ../src/PrimitiveProcedures/StringAppend.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-StringAppend.o `test -f '../src/PrimitiveProcedures/StringAppend.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/StringAppend.cpp
+
+test_cpp-StringAppend.obj: ../src/PrimitiveProcedures/StringAppend.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-StringAppend.obj `if test -f '../src/PrimitiveProcedures/StringAppend.cpp'; then $(CYGPATH_W) '../src/PrimitiveProcedures/StringAppend.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/PrimitiveProcedures/StringAppend.cpp'; fi`
 
 test_cpp-Set.o: ../src/PrimitiveProcedures/Set.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Set.o `test -f '../src/PrimitiveProcedures/Set.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/Set.cpp
