--- a/experimental/higepon/scheme/test_cpp/Makefile.in
+++ b/experimental/higepon/scheme/test_cpp/Makefile.in
@@ -60,8 +60,7 @@ am_test_cpp_OBJECTS = test_cpp-main.$(OBJEXT) test_cpp-yaml.$(OBJEXT) \
 	test_cpp-Begin.$(OBJEXT) test_cpp-Node.$(OBJEXT) \
 	test_cpp-Macro.$(OBJEXT) test_cpp-MacroFilter.$(OBJEXT) \
 	test_cpp-Parser.$(OBJEXT) test_cpp-Cond.$(OBJEXT) \
-	test_cpp-Pair.$(OBJEXT) test_cpp-And.$(OBJEXT) \
-	test_cpp-Or.$(OBJEXT) test_cpp-Let.$(OBJEXT) \
+	test_cpp-Pair.$(OBJEXT) test_cpp-Let.$(OBJEXT) \
 	test_cpp-LetAsterisk.$(OBJEXT) test_cpp-scheme.$(OBJEXT) \
 	test_cpp-load.$(OBJEXT) test_cpp-Application.$(OBJEXT) \
 	test_cpp-Plus.$(OBJEXT) test_cpp-Minus.$(OBJEXT) \
@@ -225,10 +224,6 @@ MacroFilterTest.cpp\
 ../src/Cond.h\
 ../src/Pair.cpp\
 ../src/Pair.h\
-../src/And.cpp\
-../src/And.h\
-../src/Or.cpp\
-../src/Or.h\
 ../src/Let.cpp\
 ../src/Let.h\
 ../src/LetAsterisk.cpp\
@@ -489,18 +484,6 @@ test_cpp-Pair.o: ../src/Pair.cpp
 
 test_cpp-Pair.obj: ../src/Pair.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Pair.obj `if test -f '../src/Pair.cpp'; then $(CYGPATH_W) '../src/Pair.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Pair.cpp'; fi`
-
-test_cpp-And.o: ../src/And.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-And.o `test -f '../src/And.cpp' || echo '$(srcdir)/'`../src/And.cpp
-
-test_cpp-And.obj: ../src/And.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-And.obj `if test -f '../src/And.cpp'; then $(CYGPATH_W) '../src/And.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/And.cpp'; fi`
-
-test_cpp-Or.o: ../src/Or.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Or.o `test -f '../src/Or.cpp' || echo '$(srcdir)/'`../src/Or.cpp
-
-test_cpp-Or.obj: ../src/Or.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Or.obj `if test -f '../src/Or.cpp'; then $(CYGPATH_W) '../src/Or.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Or.cpp'; fi`
 
 test_cpp-Let.o: ../src/Let.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Let.o `test -f '../src/Let.cpp' || echo '$(srcdir)/'`../src/Let.cpp
@@ -781,6 +764,11 @@ uninstall-am: uninstall-binPROGRAMS uninstall-info-am
 	mostlyclean-generic pdf pdf-am ps ps-am tags uninstall \
 	uninstall-am uninstall-binPROGRAMS uninstall-info-am
 
+
+#../src/And.cpp\
+#../src/And.h\
+#../src/Or.cpp\
+#../src/Or.h
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
